--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = sbc8031
-description = Add a short description here!
+description = 8031 Single Board Computer CLI
 author = Hidemoto Yamauchi
 author_email = yamau6809@gmail.com
 license = MIT
@@ -41,7 +41,7 @@ package_dir =
     =src
 
 # Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
+python_requires = >=3.10
 
 # Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
 # Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
@@ -49,7 +49,9 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-
+    pyserial
+    pyyaml
+    click
 
 [options.packages.find]
 where = src
@@ -72,8 +74,8 @@ testing =
 # console_scripts =
 #     script_name = sbc8031.module:function
 # For example:
-# console_scripts =
-#     fibonacci = sbc8031.skeleton:run
+console_scripts =
+    sbc8031 = sbc8031.cli:sbc8031_cli
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
